<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fb"
        />

    <Button
        android:id="@+id/tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tw"
        />

    <Button
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ln"
        />

    <Button
        android:id="@+id/yahoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yahoo"
        />

    <Button
        android:id="@+id/google_plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/googe_plus"
        />

    <Button
        android:id="@+id/youtube_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youtube_api"
        />

</LinearLayout>