<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/above"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hybrid_map"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite_map"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/terrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terrain_map"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/indoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoor_map"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle_map"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <fragment
        android:layout_below="@+id/above"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".activities.GoogleMapActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
</RelativeLayout>